Need a fifth addopens-parameter for JDK 9
git-svn-id: https://svn.apache.org/repos/asf/poi/trunk@1780457 13f79535-47bb-0310-9956-ffa450edef68